--- a/examples/interactive.ipynb
+++ b/examples/interactive.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c290854ed282409fd1307aed72d6dc32",
+       "model_id": "6426c0c0508541b5497423446ad5b33a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,8 +36,9 @@
        "A Jupyter Widget"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -103,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "(:LIMA 7 :YANKEE \"bar\")"
+       "(:PAPA \"gronk\" :ROMEO \"gronk\" :LIMA 7 :YANKEE \"bar\")"
       ]
      },
      "execution_count": 3,
@@ -143,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78923dbf6539430172725554ee7b6b0a",
+       "model_id": "1314719641e245a0a3136a83ae0b50a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -151,8 +152,9 @@
        "A Jupyter Widget"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
