--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -16,28 +16,52 @@
       "; Loading \"alexandria\"\n",
       "\n",
       "To load \"png\":\n",
-      "  Load 1 ASDF system:\n",
-      "    png\n",
+      "  Load 3 ASDF systems:\n",
+      "    asdf cffi cffi-grovel\n",
+      "  Install 1 Quicklisp release:\n",
+      "    cl-png\n",
+      "\n",
+      "; Fetching #<URL \"http://beta.quicklisp.org/archive/cl-png/2020-09-25/cl-png-vl-anyversion-11b965fe-git.tgz\">\n",
+      "; 8311.11KB\n",
+      "\n",
+      "==================================================\n",
+      "8,510,578 bytes in 0.56 seconds (14929.84KB/sec)\n",
       "\n",
       "; Loading \"png\"\n",
       "[package image]...................................\n",
-      "[package png]; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel-tmpAR3FSGEY.o -c -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -D_GNU_SOURCE -fno-omit-frame-pointer -DSBCL_HOME=/usr/lib/sbcl -g -Wall -Wundef -Wsign-compare -Wpointer-arith -O3 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wunused-parameter -fno-omit-frame-pointer -momit-leaf-frame-pointer -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk/usr/X11/include -I/opt/local/include -fPIC -I/home/yitzi/quicklisp/dists/quicklisp/software/cffi_0.23.0/ /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel.c\n",
-      ".; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel-tmpJAIDFZTC -Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now -g -Wl,--export-dynamic /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel.o\n",
+      "[package png]; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel-tmpXGI96G7.o -c -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -D_GNU_SOURCE -fno-omit-frame-pointer -DSBCL_HOME=/usr/lib/sbcl -g -Wall -Wundef -Wsign-compare -Wpointer-arith -O3 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wunused-parameter -fno-omit-frame-pointer -momit-leaf-frame-pointer -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk/usr/X11/include -I/opt/local/include -fPIC -I/home/yitzi/quicklisp/dists/quicklisp/software/cffi_0.24.1/ /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel.c\n",
+      "; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel-tmpF0KDNX6B -Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now -g -Wl,--export-dynamic /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel.o\n",
       "; /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/grovel__grovel.grovel-tmp.lisp\n",
-      "; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers__wrapper-tmp9V47YWQF.o -c -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -D_GNU_SOURCE -fno-omit-frame-pointer -DSBCL_HOME=/usr/lib/sbcl -g -Wall -Wundef -Wsign-compare -Wpointer-arith -O3 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wunused-parameter -fno-omit-frame-pointer -momit-leaf-frame-pointer -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk/usr/X11/include -I/opt/local/include -fPIC -I/home/yitzi/quicklisp/dists/quicklisp/software/cffi_0.23.0/ /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers__wrapper.c\n",
+      ".; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers__wrapper-tmpWKYU2CYG.o -c -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -D_GNU_SOURCE -fno-omit-frame-pointer -DSBCL_HOME=/usr/lib/sbcl -g -Wall -Wundef -Wsign-compare -Wpointer-arith -O3 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wunused-parameter -fno-omit-frame-pointer -momit-leaf-frame-pointer -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.7.sdk/usr/X11/include -I/opt/local/include -fPIC -I/home/yitzi/quicklisp/dists/quicklisp/software/cffi_0.24.1/ /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers__wrapper.c\n",
       "; cc -o /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers.so -shared -march=x86-64 -mtune=generic -O2 -pipe -fno-plt -D_GNU_SOURCE -fno-omit-frame-pointer -DSBCL_HOME=/usr/lib/sbcl -g -Wall -Wundef -Wsign-compare -Wpointer-arith -O3 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Wunused-parameter -fno-omit-frame-pointer -momit-leaf-frame-pointer /home/yitzi/.cache/common-lisp/sbcl-2.1.1-linux-x64/home/yitzi/quicklisp/dists/quicklisp/software/cl-png-vl-anyversion-11b965fe-git/wrappers__wrapper.o\n",
       "....................................\n",
       "[package bmp].....................................\n",
       "[package pnm]......\n",
       "To load \"iterate\":\n",
       "  Load 1 ASDF system:\n",
+      "    asdf\n",
+      "  Install 1 Quicklisp release:\n",
       "    iterate\n",
       "\n",
-      "; Loading \"iterate\"\n",
+      "; Fetching #<URL \"http://beta.quicklisp.org/archive/iterate/2021-02-28/iterate-20210228-git.tgz\">\n",
+      "; 325.03KB\n",
       "\n",
+      "==================================================\n",
+      "332,831 bytes in 0.07 seconds (4432.13KB/sec)\n",
+      "\n",
+      "; Loading \"iterate\"\n",
+      "[package iterate]..........................\n",
       "To load \"flexi-streams\":\n",
-      "  Load 1 ASDF system:\n",
+      "  Load 2 ASDF systems:\n",
+      "    asdf trivial-gray-streams\n",
+      "  Install 1 Quicklisp release:\n",
       "    flexi-streams\n",
+      "\n",
+      "; Fetching #<URL \"http://beta.quicklisp.org/archive/flexi-streams/2020-09-25/flexi-streams-20200925-git.tgz\">\n",
+      "; 431.82KB\n",
+      "\n",
+      "==================================================\n",
+      "442,184 bytes in 0.09 seconds (4982.41KB/sec)\n",
       "\n",
       "; Loading \"flexi-streams\"\n",
       "[package flexi-streams]...........................\n",
@@ -66,8 +90,16 @@
       "[package lparallel.cognate].......................\n",
       "[package lparallel]\n",
       "To load \"cl-cpus\":\n",
-      "  Load 1 ASDF system:\n",
+      "  Load 2 ASDF systems:\n",
+      "    asdf cffi\n",
+      "  Install 1 Quicklisp release:\n",
       "    cl-cpus\n",
+      "\n",
+      "; Fetching #<URL \"http://beta.quicklisp.org/archive/cl-cpus/2018-04-30/cl-cpus-20180430-git.tgz\">\n",
+      "; 2.45KB\n",
+      "\n",
+      "==================================================\n",
+      "2,505 bytes in 0.00 seconds (0.00KB/sec)\n",
       "\n",
       "; Loading \"cl-cpus\"\n",
       "[package cl-cpus]"
@@ -103,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "#<LPARALLEL.KERNEL:KERNEL :NAME \"lparallel\" :WORKER-COUNT 16 :USE-CALLER NIL :ALIVE T :SPIN-COUNT 2000 {1003B22C33}>"
+       "#<LPARALLEL.KERNEL:KERNEL :NAME \"lparallel\" :WORKER-COUNT 4 :USE-CALLER NIL :ALIVE T :SPIN-COUNT 2000 {100420FDE3}>"
       ]
      },
      "execution_count": 2,
@@ -178,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "#<STANDARD-METHOD COMMON-LISP:INITIALIZE-INSTANCE :AFTER (JULIA-WIDGET) {10054B7B13}>"
+       "#<STANDARD-METHOD COMMON-LISP:INITIALIZE-INSTANCE :AFTER (JULIA-WIDGET) {100490DE93}>"
       ]
      },
      "execution_count": 4,
@@ -313,7 +345,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e40f5768e3b94df20537f0ee3200a39c",
+       "model_id": "787f2a22e3b84d932d4d2c09c7ffd8cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,8 +353,9 @@
        "A Jupyter Widget"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -402,6 +435,7 @@
       "state": {
        "height": 640,
        "layout": "IPY_MODEL_42b9bb20387d4e7452bc420b3313b71e",
+       "value": {},
        "width": 640
       }
      },
