--- a/examples/widgets.ipynb
+++ b/examples/widgets.ipynb
@@ -2,9 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A-BUTTON"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2b6c7c1e88640f762df08941d757f97",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(defvar a-button (jw:make-button :description \"Click me\" :on-click (list (lambda (w) (setf (jw:widget-description w) \"I've been clicked.\")))))\n",
     "\n",
@@ -68,9 +94,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Common Lisp (clasp)",
+   "display_name": "Common Lisp (SBCL)",
    "language": "common-lisp",
-   "name": "common-lisp_clasp"
+   "name": "common-lisp_sbcl"
   },
   "language_info": {
    "codemirror_mode": "text/x-common-lisp",
@@ -78,7 +104,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "cclasp-boehmprecise-0.4.2-4295-g96fae631b-cst"
+   "version": "2.1.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
