Add output stream and some tweaks

--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -265,11 +265,43 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "DIVISION-BY-ZERO",
+     "evalue": "arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).",
+     "output_type": "error",
+     "traceback": [
+      "3: ((FLET \"H1\" :IN COMMON-LISP-JUPYTER::MY-EVAL) arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).)",
+      "4: (SB-KERNEL::%SIGNAL arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).)",
+      "5: (ERROR DIVISION-BY-ZERO OPERATION / OPERANDS (1 0))",
+      "6: (\"DIVISION-BY-ZERO-ERROR\" 1 0)",
+      "7: (SB-KERNEL:INTERNAL-ERROR #.(SB-SYS:INT-SAP #X7F7B8362DC80) #<unused argument>)",
+      "8: (\"foreign function: call_into_lisp\")",
+      "9: (\"foreign function: funcall2\")",
+      "10: (\"foreign function: interrupt_internal_error\")",
+      "11: (\"foreign function: #x558902F62993\")",
+      "12: (SB-KERNEL::INTEGER-/-INTEGER 1 0)",
+      "13: (/ 1 0)",
+      "14: (SB-INT:SIMPLE-EVAL-IN-LEXENV (/ 1 0) #<NULL-LEXENV>)",
+      "15: (EVAL (/ 1 0))",
+      "16: (COMMON-LISP-JUPYTER::MY-EVAL (/ 1 0))",
+      "17: ((:METHOD JUPYTER:EVALUATE-CODE (COMMON-LISP-JUPYTER:KERNEL T)) #<unused argument> (/ 1 0))",
+      "18: (JUPYTER::HANDLE-EXECUTE-REQUEST)",
+      "19: (JUPYTER::RUN-SHELL #<KERNEL {1003A22F83}>)",
+      "20: ((LAMBDA NIL :IN BORDEAUX-THREADS::BINDING-DEFAULT-SPECIALS))",
+      "21: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))",
+      "22: ((FLET \"WITHOUT-INTERRUPTS-BODY-11\" :IN SB-THREAD::RUN))",
+      "23: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))",
+      "24: ((FLET \"WITHOUT-INTERRUPTS-BODY-4\" :IN SB-THREAD::RUN))",
+      "25: (SB-THREAD::RUN)",
+      "26: (\"foreign function: call_into_lisp\")",
+      "27: (\"foreign function: funcall1\")"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "#<ENVIRONMENT {1002A057D3}>\n",
-      "   [Environment of thread #<THREAD \"SHELL Thread\" RUNNING {10019175D3}>]\n",
+      "#<ENVIRONMENT {1003A05853}>\n",
+      "   [Environment of thread #<THREAD \"SHELL Thread\" RUNNING {10051C8C13}>]\n",
       "\n",
       "arithmetic error DIVISION-BY-ZERO signalled\n",
       "Operation was (/ 1 0).\n",
@@ -283,61 +315,27 @@
       "Operation was (/ 1 0).)\n",
       " 5: (ERROR DIVISION-BY-ZERO OPERATION / OPERANDS (1 0))\n",
       " 6: (\"DIVISION-BY-ZERO-ERROR\" 1 0)\n",
-      " 7: (SB-KERNEL:INTERNAL-ERROR #.(SB-SYS:INT-SAP #X7F95097F5C40) #<unused argument>)\n",
+      " 7: (SB-KERNEL:INTERNAL-ERROR #.(SB-SYS:INT-SAP #X7F7B8362DC80) #<unused argument>)\n",
       " 8: (\"foreign function: call_into_lisp\")\n",
       " 9: (\"foreign function: funcall2\")\n",
       " 10: (\"foreign function: interrupt_internal_error\")\n",
-      " 11: (\"foreign function: #x555D265B6993\")\n",
+      " 11: (\"foreign function: #x558902F62993\")\n",
       " 12: (SB-KERNEL::INTEGER-/-INTEGER 1 0)\n",
       " 13: (/ 1 0)\n",
       " 14: (SB-INT:SIMPLE-EVAL-IN-LEXENV (/ 1 0) #<NULL-LEXENV>)\n",
       " 15: (EVAL (/ 1 0))\n",
       " 16: (COMMON-LISP-JUPYTER::MY-EVAL (/ 1 0))\n",
       " 17: ((:METHOD JUPYTER:EVALUATE-CODE (COMMON-LISP-JUPYTER:KERNEL T)) #<unused argument> (/ 1 0))\n",
-      " 18: (JUPYTER::HANDLE-EXECUTE-REQUEST #<KERNEL {100392AF83}> #<MESSAGE {100282ED53}>)\n",
-      " 19: (JUPYTER::HANDLE-SHELL-MESSAGE #<KERNEL {100392AF83}> #<MESSAGE {100282ED53}>)\n",
-      " 20: (JUPYTER::RUN-SHELL #<KERNEL {100392AF83}>)\n",
-      " 21: ((LAMBDA NIL :IN BORDEAUX-THREADS::BINDING-DEFAULT-SPECIALS))\n",
-      " 22: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))\n",
-      " 23: ((FLET \"WITHOUT-INTERRUPTS-BODY-11\" :IN SB-THREAD::RUN))\n",
-      " 24: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))\n",
-      " 25: ((FLET \"WITHOUT-INTERRUPTS-BODY-4\" :IN SB-THREAD::RUN))\n",
-      " 26: (SB-THREAD::RUN)\n",
-      " 27: (\"foreign function: call_into_lisp\")\n",
-      " 28: (\"foreign function: funcall1\")"
-     ]
-    },
-    {
-     "ename": "DIVISION-BY-ZERO",
-     "evalue": "arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).",
-     "output_type": "error",
-     "traceback": [
-      "3: ((FLET \"H1\" :IN COMMON-LISP-JUPYTER::MY-EVAL) arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).)",
-      "4: (SB-KERNEL::%SIGNAL arithmetic error DIVISION-BY-ZERO signalled\nOperation was (/ 1 0).)",
-      "5: (ERROR DIVISION-BY-ZERO OPERATION / OPERANDS (1 0))",
-      "6: (\"DIVISION-BY-ZERO-ERROR\" 1 0)",
-      "7: (SB-KERNEL:INTERNAL-ERROR #.(SB-SYS:INT-SAP #X7F95097F5C40) #<unused argument>)",
-      "8: (\"foreign function: call_into_lisp\")",
-      "9: (\"foreign function: funcall2\")",
-      "10: (\"foreign function: interrupt_internal_error\")",
-      "11: (\"foreign function: #x555D265B6993\")",
-      "12: (SB-KERNEL::INTEGER-/-INTEGER 1 0)",
-      "13: (/ 1 0)",
-      "14: (SB-INT:SIMPLE-EVAL-IN-LEXENV (/ 1 0) #<NULL-LEXENV>)",
-      "15: (EVAL (/ 1 0))",
-      "16: (COMMON-LISP-JUPYTER::MY-EVAL (/ 1 0))",
-      "17: ((:METHOD JUPYTER:EVALUATE-CODE (COMMON-LISP-JUPYTER:KERNEL T)) #<unused argument> (/ 1 0))",
-      "18: (JUPYTER::HANDLE-EXECUTE-REQUEST #<KERNEL {100392AF83}> #<MESSAGE {100282ED53}>)",
-      "19: (JUPYTER::HANDLE-SHELL-MESSAGE #<KERNEL {100392AF83}> #<MESSAGE {100282ED53}>)",
-      "20: (JUPYTER::RUN-SHELL #<KERNEL {100392AF83}>)",
-      "21: ((LAMBDA NIL :IN BORDEAUX-THREADS::BINDING-DEFAULT-SPECIALS))",
-      "22: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))",
-      "23: ((FLET \"WITHOUT-INTERRUPTS-BODY-11\" :IN SB-THREAD::RUN))",
-      "24: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))",
-      "25: ((FLET \"WITHOUT-INTERRUPTS-BODY-4\" :IN SB-THREAD::RUN))",
-      "26: (SB-THREAD::RUN)",
-      "27: (\"foreign function: call_into_lisp\")",
-      "28: (\"foreign function: funcall1\")"
+      " 18: (JUPYTER::HANDLE-EXECUTE-REQUEST)\n",
+      " 19: (JUPYTER::RUN-SHELL #<KERNEL {1003A22F83}>)\n",
+      " 20: ((LAMBDA NIL :IN BORDEAUX-THREADS::BINDING-DEFAULT-SPECIALS))\n",
+      " 21: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))\n",
+      " 22: ((FLET \"WITHOUT-INTERRUPTS-BODY-11\" :IN SB-THREAD::RUN))\n",
+      " 23: ((FLET SB-UNIX::BODY :IN SB-THREAD::RUN))\n",
+      " 24: ((FLET \"WITHOUT-INTERRUPTS-BODY-4\" :IN SB-THREAD::RUN))\n",
+      " 25: (SB-THREAD::RUN)\n",
+      " 26: (\"foreign function: call_into_lisp\")\n",
+      " 27: (\"foreign function: funcall1\")"
      ]
     }
    ],
@@ -1179,23 +1177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "What is your quest?  To seek the Holy Parens\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "QUEST"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1206,7 @@
        "NIL"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1223,7 +1214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your quest is: To seek the Holy Parens"
+      "Your quest is: "
      ]
     }
    ],
@@ -1555,6 +1546,20 @@
     "(/ 9 3) \n",
     "(list + ++ +++)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
