--- a/examples/widgets.ipynb
+++ b/examples/widgets.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2b6c7c1e88640f762df08941d757f97",
+       "model_id": "9d9eefdeb56a472c6408c7bde31a5a59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,9 +39,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A-INT-SLIDER"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05328a0cd5cb45699d57f4b2f8785fe4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(defvar a-int-slider (jw:make-int-slider))\n",
     "\n",
@@ -50,36 +76,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(jw:widget-value a-int-slider)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(setf (jw:widget-value a-int-slider) 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"vertical\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(setf (jw:widget-orientation a-int-slider) \"vertical\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05328a0cd5cb45699d57f4b2f8785fe4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a-int-slider"
    ]
@@ -104,56 +179,55 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "2.1.6"
+   "version": "2.2.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "1c73e203ebb641736338d165f1d1cf2b": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "ButtonStyleModel",
-      "state": {}
-     },
-     "27a88fde460b47373acae976fe7c5314": {
+     "05328a0cd5cb45699d57f4b2f8785fe4": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "1.5.0",
       "model_name": "IntSliderModel",
       "state": {
-       "layout": "IPY_MODEL_34ffa2ac7f8b4dc13483e64fa3bbc532",
+       "layout": "IPY_MODEL_b6ddc5553b9344be0f7259dbac149819",
        "orientation": "vertical",
-       "style": "IPY_MODEL_3053b0a84e404f4223745eebfbd9cad5",
+       "style": "IPY_MODEL_e979389e57514553c787fd255fbf2183",
        "value": 10
       }
      },
-     "3053b0a84e404f4223745eebfbd9cad5": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "1.5.0",
-      "model_name": "SliderStyleModel",
-      "state": {}
-     },
-     "34ffa2ac7f8b4dc13483e64fa3bbc532": {
+     "3b36bf817f594f54bc81e7bd215a8b4b": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "1.2.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "76d9935234944092dfa3e2ea2dfd5813": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "1.2.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "d6d1783994284c47f132d25b42a15c12": {
+     "9d9eefdeb56a472c6408c7bde31a5a59": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
        "description": "Click me",
-       "layout": "IPY_MODEL_76d9935234944092dfa3e2ea2dfd5813",
-       "style": "IPY_MODEL_1c73e203ebb641736338d165f1d1cf2b",
-       "tooltip": null
+       "layout": "IPY_MODEL_3b36bf817f594f54bc81e7bd215a8b4b",
+       "style": "IPY_MODEL_af6412848c1c44b1f22b53bdadafbf3d"
       }
+     },
+     "af6412848c1c44b1f22b53bdadafbf3d": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "ButtonStyleModel",
+      "state": {}
+     },
+     "b6ddc5553b9344be0f7259dbac149819": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "1.2.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "e979389e57514553c787fd255fbf2183": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "1.5.0",
+      "model_name": "SliderStyleModel",
+      "state": {}
      }
     },
     "version_major": 2,
