Add ASDF component for lab extensions

--- a/examples/about.ipynb
+++ b/examples/about.ipynb
@@ -19,40 +19,95 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "NIL"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "NIL"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "interrupt",
+     "evalue": "Execution interrupted",
+     "output_type": "error",
+     "traceback": []
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Goodbye, cruel World."
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type SIMPLE-ERROR\n",
+      "  Unsupported wildcard pattern: \"2671dab9be5a41500a382f6ac5e9ec1d-*\"\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 2.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 3.\n",
+      " Return to debug level 2.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 4.\n",
+      " Return to debug level 3.\n",
+      " Return to debug level 2.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 5.\n",
+      " Return to debug level 4.\n",
+      " Return to debug level 3.\n",
+      " Return to debug level 2.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 6.\n",
+      " Return to debug level 5.\n",
+      " Return to debug level 4.\n",
+      " Return to debug level 3.\n",
+      " Return to debug level 2.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 7.\n",
+      " Return to debug level 6.\n",
+      " Return to debug level 5.\n",
+      " Return to debug level 4.\n",
+      " Return to debug level 3.\n",
+      " Return to debug level 2.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 8.\n",
+      " Return to debug level 7.\n",
+      " Return to debug level 6.\n",
+      " Return to debug level 5.\n",
+      " Return to debug level 4.\n",
+      " Return to debug level 3.\n",
+      " Return to debug level 2.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n",
+      "#<THREAD \"SHELL Thread\" native {4DAF9DCA}>: Debugger invoked on condition of type TYPE-ERROR\n",
+      "  The value #<JUPYTER::IOPUB-STREAM {6D3551E3}> is not of type TWO-WAY-STREAM.\n",
+      " Return to debug level 9.\n",
+      " Return to debug level 8.\n",
+      " Return to debug level 7.\n",
+      " Return to debug level 6.\n",
+      " Return to debug level 5.\n",
+      " Return to debug level 4.\n",
+      " Return to debug level 3.\n",
+      " Return to debug level 2.\n",
+      " Return to debug level 1.\n",
+      " Abort thread.\n"
      ]
     }
    ],
@@ -1571,9 +1626,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Common Lisp (SBCL)",
+   "display_name": "Common Lisp (Armed Bear Common Lisp)",
    "language": "common-lisp",
-   "name": "common-lisp_sbcl"
+   "name": "common-lisp_abcl"
   },
   "language_info": {
    "codemirror_mode": "text/x-common-lisp",
@@ -1581,7 +1636,7 @@
    "mimetype": "text/x-common-lisp",
    "name": "common-lisp",
    "pygments_lexer": "common-lisp",
-   "version": "2.1.1"
+   "version": "1.9.1-fasl43"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
